RESOLVED FIXED121765
REGRESSION (r155998): when zooming in, tiles are too small
https://bugs.webkit.org/show_bug.cgi?id=121765
Summary REGRESSION (r155998): when zooming in, tiles are too small
Simon Fraser (smfr)
Reported 2013-09-22 08:49:17 PDT
http://trac.webkit.org/changeset/155998 broke the TileController scaling beahvior when zooming; we make the tiles too small now.
Attachments
Patch (8.23 KB, patch)
2013-09-23 14:41 PDT, Simon Fraser (smfr)
dino: review+
Radar WebKit Bug Importer
Comment 1 2013-09-22 08:49:38 PDT
Simon Fraser (smfr)
Comment 2 2013-09-23 14:41:30 PDT
Simon Fraser (smfr)
Comment 3 2013-09-23 15:15:47 PDT
Note You need to log in before you can comment on or make changes to this bug.